# directories-rs

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: main.yml  rust.yml
benches/: constructors.rs
src/: ext.rs  lib.rs  lin.rs  mac.rs  sys.rs  unix.rs  wasm.rs  win.rs  xdg_user_dirs.rs
src/extensions/: base_ext.rs  helpers.rs  mod.rs  project_ext.rs
