[package]
name        = "directories"
version     = "0.10.0"
authors     = [ "Simon Ochsenreither <simon@ochsenreither.de>" ]
description = "A tiny library that provides platform-specific standard locations of directories for config, cache and other data on Linux, Windows and macOS by leveraging the mechanisms defined by the XDG base/user directory specifications on Linux, the Known Folder API on Windows, and the Standard Directory guidelines on macOS."
readme      = "README.md"
license     = "MPL-2.0"
repository  = "https://github.com/soc/directories-rs"
maintenance = { status = "actively-developed" }
keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["knownfolders", "objbase", "shlobj"] }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "constructors"
harness = false
