[package]
name        = "directories"
version     = "4.0.1"
authors     = ["Simon Ochsenreither <simon@ochsenreither.de>"]
description = "A tiny mid-level library that provides platform-specific standard locations of directories for config, cache and other data on Linux, Windows and macOS by leveraging the mechanisms defined by the XDG base/user directory specifications on Linux, the Known Folder API on Windows, and the Standard Directory guidelines on macOS."
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/soc/directories-rs"
maintenance = { status = "actively-developed" }
keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]

[dependencies]
dirs-sys = "0.3.6"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "constructors"
harness = false
